--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,6 @@ updates:
     schedule:
       interval: "weekly"
       day: wednesday
+    # Add Core Platform Team as reviewers
+    team-reviewers:
+      - "SolaceDev/core-platform-team"
